--- a/src/pages/wishlist/wishlist.scss
+++ b/src/pages/wishlist/wishlist.scss
@@ -19,7 +19,7 @@ page-wishlist {
       .wishlist-area .item{ margin-bottom:0;}
       .wishlist-area .item ion-thumbnail[item-start]{ margin-left: 8px;}
       .wishlist-area .item [item-end] {text-align: right; align-items: flex-start; margin-top: 0;}
-      .heart{color: #666;}
+      .heart{color: #30be21;}
       .wishlist-area .item [item-end] p{ color: #30be21; font-weight: 500;}
     
     }
