--- a/src/pages/checkout/checkout.scss
+++ b/src/pages/checkout/checkout.scss
@@ -39,10 +39,10 @@ page-checkout {
 
     .card h2{ padding-top: 1.6rem; font-weight: 500;}
 
-    .item .radio{ display:inline-flex;}
-    .radio .radio-checked{ border-color:#30be21; margin-right: 15px; }
-    .radio .radio-inner{background-color: #30be21;}
-    .item-radio .item-inner .input-wrapper .label{ display: flex; align-items: center; flex-wrap: wrap;}
+    // .item .radio{ display:inline-flex;}
+    // .radio .radio-checked{ border-color:#30be21; margin-right: 15px; }
+    // .radio .radio-inner{background-color: #30be21;}
+    // .item-radio .item-inner .input-wrapper .label{ display: flex; align-items: center; flex-wrap: wrap;}
 
     .item.item .checkbox{ margin-right: 9px}
     .item-checkbox .item-inner .input-wrapper .label { margin-top: 0;}
