--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,4 +24,4 @@
 .footer .toolbar .row .col a img{width: 24px; height: 24px;}
 .titl{ margin-top: 0; margin-bottom: 0; color: #646464;}
 
-
+.card-md{margin-bottom: 100px !important ;}
