--- a/src/pages/buyer-profile/buyer-profile.scss
+++ b/src/pages/buyer-profile/buyer-profile.scss
@@ -33,4 +33,7 @@ page-buyer-profile {
     .list .item{ margin-bottom: 0;}
 
     .card:last-child{ margin-bottom: 70px;}
+    .list {
+        margin-bottom: 100px;
+    }
 }
