--- a/src/pages/checkout/checkout.scss
+++ b/src/pages/checkout/checkout.scss
@@ -47,5 +47,12 @@ page-checkout {
     .item.item .checkbox{ margin-right: 9px}
     .item-checkbox .item-inner .input-wrapper .label { margin-top: 0;}
     .checkbox-checked{border-color:#30be21 !important; background-color: #30be21 !important;}
+    .card-md {
+        margin-bottom: 12px !important;
+    }
 
+    .list
+	{
+    margin-bottom: 55px
+	}
 }
