--- a/src/pages/final-checkout/final-checkout.scss
+++ b/src/pages/final-checkout/final-checkout.scss
@@ -33,6 +33,10 @@ page-final-checkout {
     ion-footer .toolbar ion-title .toolbar-title{ text-align: center; color: #ffffff; font-weight: 500 !important; }
     
     ion-footer .toolbar .toolbar-background{ background: #30be21; border: 0; }
-    
+
+    .row {
+        
+        font-size: 15px !important;
+    }
     
 }
