--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -52,4 +52,7 @@ page-home {
         max-height: 32px;     
         -webkit-line-clamp: 2; 
         -webkit-box-orient: vertical;}
+        .card-md {
+            margin-bottom: 2px !important;
+        }
 }
