--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -1,5 +1,5 @@
 page-forgot-password {
-    .logo {text-align: center; margin-top:90px; margin-bottom:130px;
+	.logo {text-align: center; margin-top:90px; margin-bottom:130px;
         img {max-width: 140px;}
       }
       .list {margin-bottom: 0;}
@@ -15,5 +15,5 @@ page-forgot-password {
 	input[type="text"]::-moz-placeholder, input[type="password"]::-moz-placeholder {color: #fff;}
 	input[type="text"]:-ms-input-placeholder, input[type="password"]:-ms-input-placeholder {color: #fff;}
 	input[type="text"]:-moz-placeholder, input[type="password"]:-moz-placeholder {color: #fff;}
-	ion-input{color:black;}
+	ion-input{color: #fff;}
 }
