--- a/src/pages/search-result-details/search-result-details.scss
+++ b/src/pages/search-result-details/search-result-details.scss
@@ -33,7 +33,7 @@ page-search-result-details {
     }
     
     .brdr-btm{ border-bottom: 1px solid #d8d8d8; padding-bottom: 1rem; }
-    .about-info h4{ font-weight: 500; text-align: left; margin-top: 0 !important; margin-bottom: 0;}
+    .about-info h4{ font-weight: 500; text-align: left; margin-top: 0 !important; }
     .about-info h6{ font-weight: 400; text-align: left; margin-top: 0 !important; margin-bottom: 0; color: #6f6f6f; font-size: 1.4rem;}
     .ml{ color: #2b2b2b !important; font-weight: 900 !important; padding-top: 1rem; padding-bottom: 1rem; }
     .price{ color: #30be21 !important; font-size: 1.4rem !important; font-weight: 400 !important; margin-top: 0 !important; margin-bottom: 0 !important; }
@@ -43,6 +43,9 @@ page-search-result-details {
       color: #2a2a2a;
       text-align: left;
     }
+    .list .item {
+       margin-bottom: 0rem !important; 
+  }
     
     .about-info ion-icon {
       color: color($colors, primary);
@@ -80,5 +83,15 @@ page-search-result-details {
     .wishlist-area .item{ margin-bottom:0;}
     .wishlist-area .item ion-thumbnail[item-start]{ margin-left: 16px;}
     .wishlist-area .item p[item-end]{ font-weight: 500;}
-  
+    .card-md {
+      margin-bottom: 12px !important;
+  } 
+
+  .alert-md .alert-wrapper {
+    border-radius: 2px;
+    max-width: 20px;
+    background-color: #fafafa;
+    -webkit-box-shadow: 0 16px 20px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 16px 20px rgba(0, 0, 0, 0.4);
+  }
   }
