--- a/src/pages/wishlist/wishlist.scss
+++ b/src/pages/wishlist/wishlist.scss
@@ -16,7 +16,7 @@ page-wishlist {
     .list .item{ margin-bottom: 0; }
     
     .wishlist-area{ width: auto; margin: 0px 0 44px;}
-      .wishlist-area .item{ margin-bottom:0;}
+      .wishlist-area .item{ margin-bottom:10px; }
       .wishlist-area .item ion-thumbnail[item-start]{ margin-left: 8px;}
       .wishlist-area .item [item-end] {text-align: right; align-items: flex-start; margin-top: 0;}
       .heart{color: #30be21;}
