--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,3 +25,16 @@
 .titl{ margin-top: 0; margin-bottom: 0; color: #646464;}
 
 .card-md{margin-bottom: 100px !important ;}
+.alertstar{
+    button{
+         width: 40px;
+         margin: 0 !important;
+         background-image:url("../assets/imgs/star.png");
+         background-repeat: no-repeat;
+         background-position: center;
+         color: transparent!important;
+    }
+    .alert-button-group{padding:0; margin-top: 10px; flex-direction: row; justify-content: space-around;}
+    border-radius: 12px;
+    .alert-wrapper{border-radius: 12px;}
+}
