--- a/src/pages/order-list/order-list.scss
+++ b/src/pages/order-list/order-list.scss
@@ -35,5 +35,19 @@ page-order-list {
     }
     .pl-0{padding-left: 0;}
     .pr-0{padding-right: 0;}
+
     
+    .alertstar{
+        button{
+             width: 40px;
+             margin: 0 !important;
+             background-image:url("../assets/imgs/star.png");
+             background-repeat: no-repeat;
+             background-position: center;
+             color:transparent !important;
+        }
+        .alert-button-group{padding:0; margin-top: 10px; flex-direction: row; justify-content: space-around;}
+        border-radius: 12px;
+        .alert-wrapper{border-radius: 12px;}
+    }
 }
