--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -52,3 +52,11 @@
     .alert-wrapper{border-radius: 12px;}
 
 }
+}
+.list .item{margin-bottom:1rem !important;}
+.disable-hover{opacity:1 !important;}
+.item .item-button {
+    padding: 1.2em 0.5em !important;
+}
+
+.input-wrapper .label{font-size:12px !important;}
