--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -1,24 +1,24 @@
-page-filter {
-	.common-line{font-size:1.2rem; color:#999}
-	.common-line a{float:right; color:#999}
-	.sub-title{color:#000; text-transform:uppercase; font-size:1.2rem; border-bottom:1px solid #e3e304; padding:6px 8px; background:#faf805; line-height:1; margin:15px 0 10px}
-	.options-wrap{padding:10px}
-	.options-wrap .item .item-inner{padding-left:8px;}
-	.options-wrap ion-label.label{font-size:1.3rem; margin-top:5px; margin-bottom:5px}
-	.options-wrap ion-input .text-input{font-size:1.3rem; margin:5px 0;}
-	.options-wrap ion-select.select{padding-top:5px; padding-bottom:5px}
-	ion-item.item{border:1px solid #e1e1e1; min-height:3.2rem !important; border-radius:2px; margin-bottom:10px}
-	.heading{font-size:1.2rem; margin-bottom:8px; font-weight:500}
+// page-filter {
+// 	.common-line{font-size:1.2rem; color:#999}
+// 	.common-line a{float:right; color:#999}
+// 	.sub-title{color:#000; text-transform:uppercase; font-size:1.2rem; border-bottom:1px solid #e3e304; padding:6px 8px; background:#faf805; line-height:1; margin:15px 0 10px}
+// 	.options-wrap{padding:10px}
+// 	.options-wrap .item .item-inner{padding-left:8px;}
+// 	.options-wrap ion-label.label{font-size:1.3rem; margin-top:5px; margin-bottom:5px}
+// 	.options-wrap ion-input .text-input{font-size:1.3rem; margin:5px 0;}
+// 	.options-wrap ion-select.select{padding-top:5px; padding-bottom:5px}
+// 	ion-item.item{border:1px solid #e1e1e1; min-height:3.2rem !important; border-radius:2px; margin-bottom:10px}
+// 	.heading{font-size:1.2rem; margin-bottom:8px; font-weight:500}
 	
-	.list-md .item-input.input-has-focus:last-child {border-bottom-color:#e1e1e1; box-shadow:none}
+// 	.list-md .item-input.input-has-focus:last-child {border-bottom-color:#e1e1e1; box-shadow:none}
 	
-	.custom-checkbox.item{padding-left:0; height:20px; min-height:auto; border:0; margin-bottom:0}
-	.custom-checkbox.item .checkbox {margin-right:5px; margin-left:0}
-	.custom-checkbox.item ion-label.label{font-size:1.3rem!important; color:#888888; margin: 0}
+// 	.custom-checkbox.item{padding-left:0; height:20px; min-height:auto; border:0; margin-bottom:0}
+// 	.custom-checkbox.item .checkbox {margin-right:5px; margin-left:0}
+// 	.custom-checkbox.item ion-label.label{font-size:1.3rem!important; color:#888888; margin: 0}
 	
-	.list
-	{
-		margin-bottom: 55px
-	}
+// 	.list
+// 	{
+// 		margin-bottom: 55px
+// 	}
 
-}
+// }
