--- a/src/pages/order-list/order-list.scss
+++ b/src/pages/order-list/order-list.scss
@@ -37,17 +37,30 @@ page-order-list {
     .pr-0{padding-right: 0;}
 
     
-    .alertstar{
-        button{
-             width: 40px;
-             margin: 0 !important;
-             background-image:url("../assets/imgs/star.png");
-             background-repeat: no-repeat;
-             background-position: center;
-             color:transparent !important;
-        }
-        .alert-button-group{padding:0; margin-top: 10px; flex-direction: row; justify-content: space-around;}
-        border-radius: 12px;
-        .alert-wrapper{border-radius: 12px;}
-    }
+    // .alertstar{
+     
+    //          width: 40px;
+    //          margin: 0 !important;
+    //          background-image:url("../assets/imgs/star.png");
+    //          background-repeat: no-repeat;
+    //          background-position: center;
+    //          color:transparent !important;
+        
+        
+    //     .alert-button-group{padding:0; margin-top: 10px; flex-direction: row; justify-content: space-around;}
+    //     border-radius: 12px;
+    //     .alert-wrapper{border-radius: 12px;}
+    // }
+    // .another-class
+    // {
+    //     width: 40px;
+    //     margin: 0 !important;
+    //     background-image:url("../assets/imgs/starn.png");
+    //     background-repeat: no-repeat;
+    //     background-position: center;
+    //     color:transparent !important;   
+    // }
+
+  
+ 
 }
