--- a/src/pages/after-splash/after-splash.scss
+++ b/src/pages/after-splash/after-splash.scss
@@ -1,6 +1,6 @@
 page-after-splash {
     .logo {
-        padding: 30px 0 20px;
+        padding: 45px 0 20px;
         min-height: inherit;
         text-align: center;
     
@@ -61,4 +61,5 @@ page-after-splash {
     :-moz-placeholder { /* Firefox 18- */
       color: #7a7a7a;
     }
+    .las-item{margin-top:25%;}
 }
