--- a/src/pages/order-detail/order-detail.scss
+++ b/src/pages/order-detail/order-detail.scss
@@ -21,4 +21,5 @@ page-order-detail {
     .label{ margin-right: 0; display: flex; align-items: center; justify-content: space-between; }
     .sub-total{ color: #646464; font-size: 1.3rem; font-weight: 400;}
     .price{color: #30be21; font-weight: 500; font-size: 1.8rem !important;}
+    .card{margin:0 !important; background:#fff; width: 100% !important;}
 }
