--- a/src/pages/search-result-details/search-result-details.scss
+++ b/src/pages/search-result-details/search-result-details.scss
@@ -4,14 +4,16 @@ page-search-result-details {
       
       .bar-button-menutoggle ion-icon{ color: #5d5d5d; }
       .button-inner ion-icon{ color: #5d5d5d; }
-      .toolbar ion-title{ padding: 0 0 1px 40px;}
+      .toolbar ion-title{ padding: 0 0 1px 0;}
+      .title-ios{padding: 0 0 1px 40px;}
+      .toolbar-ios ion-title{left:40px !important;}
       .toolbar-title{ padding: 0; text-align: left;}
       .toolbar-title h3{ color: #3e3e3e; font-weight: 600; text-transform: uppercase; font-size: 1.7rem; margin-bottom: 0; margin-top: 0;}
       .toolbar-title p{ margin-top: 0; margin-bottom: 0; font-size: 1.4rem; font-weight: 400;}
       
       // .bar-button[icon-only] ion-icon { color: #30be21 !important;}
   
-   .img-dv{padding: 5px;}
+   .img-dv{padding: 5px; position:relative;}
   
       .content{ background: #f5f5f5; }
   
@@ -32,8 +34,11 @@ page-search-result-details {
       padding: 0;
     }
     
-    .brdr-btm{ border-bottom: 1px solid #d8d8d8; padding-bottom: 1rem; }
-    .about-info h4{ font-weight: 500; text-align: left; margin-top: 0 !important; }
+    .brdr-btm{ border-bottom: 1px solid #d8d8d8; margin-bottom: 1.5rem; padding-bottom:0 !important; }
+    .about-info h4{ font-weight: 500; text-align: left; margin-top: 0 !important; font-size: 1.6rem; }
+    .about-info h5{ font-weight: 500; text-align: left; margin-top: 0 !important; font-size: 1.4rem; }
+    .about-info p{margin-top:5px;}
+    .about-info p ion-icon{color:#30be21; font-size:14px;}
     .about-info h6{ font-weight: 400; text-align: left; margin-top: 0 !important; margin-bottom: 0; color: #6f6f6f; font-size: 1.4rem;}
     .ml{ color: #2b2b2b !important; font-weight: 900 !important; padding-top: 1rem; padding-bottom: 1rem; }
     .price{ color: #30be21 !important; font-size: 1.4rem !important; font-weight: 400 !important; margin-top: 0 !important; margin-bottom: 0 !important; }
@@ -76,7 +81,7 @@ page-search-result-details {
     ion-card img{ width: auto; height: 250px; margin: 0 auto;}
     .add-to-cart{ margin-top: 0; margin-bottom: 3rem;}
     .list{ margin: 0 0 44px;}
-  
+  	.item{padding-left:0 !important;}
     .wish-icon{ margin-right: 0;}
   
     .wishlist-area{ width: auto;}
@@ -94,4 +99,9 @@ page-search-result-details {
     -webkit-box-shadow: 0 16px 20px rgba(0, 0, 0, 0.4);
     box-shadow: 0 16px 20px rgba(0, 0, 0, 0.4);
   }
+  .card{margin:0 !important; background:#fff; width: 100% !important; box-shadow: none !important;}
+  .fr{position: absolute; width:30px; height:30px; right:20px; bottom:24px;}
+  .fr a{color:#30be21; font-size:24px;}
+  .content{background:#fff !important;}
+  h2{font-weight:600; color:#000; text-align:left;}
   }
