--- a/src/pages/signup-five/signup-five.scss
+++ b/src/pages/signup-five/signup-five.scss
@@ -29,7 +29,7 @@ page-signup-five {
     .list .item-block.no-brdr-btm .item-inner{ border-bottom: 0 !important;}
      .list > .item-block ion-label{ margin-right: 0 !important;  }
     //  .list > .item-block:last-child ion-label:last-child{ margin: 0;}
-    .list > .item-block:last-child{ border-bottom: 0; margin-top: 17rem;}
+    .list > .item-block:last-child{ border-bottom: 0; margin-top: 50px;}
     .label-no-mb .item-inner .input-wrapper .label{margin-bottom: 0 !important;}
     .fb-item .item-inner .input-wrapper .label { margin-bottom: 0 !important; margin-top: 0 !important;}
     .g-item .item-inner .input-wrapper .label { margin-top: 5px !important;}
