--- a/src/pages/signup-three/signup-three.scss
+++ b/src/pages/signup-three/signup-three.scss
@@ -10,9 +10,9 @@ page-signup-three {
     .list .item-block .item-inner{ border-bottom: 1px solid #d0d0d0;}
     .list .item-input:last-child{ border-bottom: 1px solid #d0d0d0; }
     
-    .list h4{ font-weight: 600; color: #272727 !important; font-size: 2rem;}
+    .list h4{ font-weight: 500; color: #272727 !important; font-size: 2rem;}
     .list .item p{text-overflow: normal; white-space: normal; word-wrap: break-all; padding-bottom: 0 !important; padding-top: 0 !important; font-size: 1.3rem; font-weight: 400; }
-    .item-input .label{ color: #636363; text-transform: uppercase;  }
+    .item-input .label{ color: #636363; text-transform: uppercase; padding: 10px 0;  }
     .item-label-floating .text-input{ color: #636363; font-size: 1.3rem; font-weight: 400;  }
     .item-input-has-focus .label[floating], .input-has-focus .label[floating]{ color: #30be21 !important; }
     .item.item-input.item-input-has-focus .item-inner, .item.item-input.input-has-focus .item-inner{ border-bottom-color: #30be21; box-shadow: none; }
@@ -70,4 +70,6 @@ page-signup-three {
     .pb-0{padding-bottom: 0;}
     
     .mt-0{margin-top: 0 !important;}
+    ion-label p{margin-top:30px !important;}
+    .las-item{margin-top:15%;}
 }
