--- a/src/pages/signupone/signupone.scss
+++ b/src/pages/signupone/signupone.scss
@@ -15,7 +15,7 @@ page-signupone {
     .select-text{ min-width: auto;}
     .select-md{ min-width: 100%;}
     
-    .list .item{ margin-bottom: 3rem; padding-left: 0; }
+    .list .item{ margin-bottom: 0; padding-left: 0; }
     
     .list > .item-block:last-child{ margin-top: 2rem; }
     
