debashree 20th Aug

--- a/src/pages/order-list/order-list.scss
+++ b/src/pages/order-list/order-list.scss
@@ -25,7 +25,8 @@ page-order-list {
     .close ion-icon{ color: #ffffff;}
     .item h4{ font-weight: 500;}
     .item p{ font-weight: 500;}
-    .card{padding: 10px 10px 0 10px;}
+    .card{padding: 10px 10px 0 10px;
+        margin-bottom: 100px !important}
     .f-w-5{font-weight: 500;}
     .detail-btn{padding: 10px !important; background: #30be21;}
     
