--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -50,221 +50,235 @@
 .no-bdr{border:0 !important;}
 
 
-    .alertstar{
-        button{
-             width: 40px;
-             margin: 0 !important;
-             background-image:url("../assets/imgs/white-star.png");
-             background-repeat: no-repeat;
-             background-position: center;
-             color: transparent!important;
+//     .alertstar{
+//         button{
+//              width: 40px;
+//              margin: 0 !important;
+//              background-image:url("../assets/imgs/white-star.png");
+//              background-repeat: no-repeat;
+//              background-position: center;
+//              color: transparent!important;
             
-        }
+//         }
         
-        .alert-button-group{padding:0; margin-top: 10px; flex-direction: row; justify-content: space-around;}
-        border-radius: 12px;
-        .alert-wrapper{border-radius: 12px;}
+//         .alert-button-group{padding:0; margin-top: 10px; flex-direction: row; justify-content: space-around;}
+//         border-radius: 12px;
+//         .alert-wrapper{border-radius: 12px;}
 
 
 
 
-}
+// }
 
 
-.another-classone
-    {
-        .alert-button:nth-child(1){
-        width: 40px;
-        margin: 0 !important;
-        background-image:url("../assets/imgs/star.png");
-        background-repeat: no-repeat;
-        background-position: center;
-        color:transparent !important; 
-        }  
+// .another-classone
+//     {
+//         .alert-button:nth-child(1){
+//         width: 40px;
+//         margin: 0 !important;
+//         background-image:url("../assets/imgs/star.png");
+//         background-repeat: no-repeat;
+//         background-position: center;
+//         color:transparent !important; 
+//         }  
 
-        button{
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/white-star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color: transparent!important;
+//         button{
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/white-star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color: transparent!important;
            
-       }
-    }
+//        }
+//     }
 
-    .another-classtwo
-    {
-        .alert-button:nth-child(2){
-        width: 40px;
-        margin: 0 !important;
-        background-image:url("../assets/imgs/star.png");
-        background-repeat: no-repeat;
-        background-position: center;
-        color:transparent !important; 
-        }  
-        .alert-button:nth-child(1){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            }  
+//     .another-classtwo
+//     {
+//         .alert-button:nth-child(2){
+//         width: 40px;
+//         margin: 0 !important;
+//         background-image:url("../assets/imgs/star.png");
+//         background-repeat: no-repeat;
+//         background-position: center;
+//         color:transparent !important; 
+//         }  
+//         .alert-button:nth-child(1){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             }  
 
-        button{
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/white-star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color: transparent!important;
+//         button{
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/white-star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color: transparent!important;
            
-       }
-    }
+//        }
+//     }
 
-    .another-classthree
-    {
+//     .another-classthree
+//     {
 
-        .alert-button:nth-child(3){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            }  
-        .alert-button:nth-child(2){
-        width: 40px;
-        margin: 0 !important;
-        background-image:url("../assets/imgs/star.png");
-        background-repeat: no-repeat;
-        background-position: center;
-        color:transparent !important; 
-        }  
-        .alert-button:nth-child(1){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            }  
+//         .alert-button:nth-child(3){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             }  
+//         .alert-button:nth-child(2){
+//         width: 40px;
+//         margin: 0 !important;
+//         background-image:url("../assets/imgs/star.png");
+//         background-repeat: no-repeat;
+//         background-position: center;
+//         color:transparent !important; 
+//         }  
+//         .alert-button:nth-child(1){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             }  
 
-        button{
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/white-star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color: transparent!important;
+//         button{
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/white-star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color: transparent!important;
            
-       }
-    }
-    .another-classfour
-    {
+//        }
+//     }
+//     .another-classfour
+//     {
 
 
-        .alert-button:nth-child(4){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            } 
-        .alert-button:nth-child(3){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            }  
-        .alert-button:nth-child(2){
-        width: 40px;
-        margin: 0 !important;
-        background-image:url("../assets/imgs/star.png");
-        background-repeat: no-repeat;
-        background-position: center;
-        color:transparent !important; 
-        }  
-        .alert-button:nth-child(1){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            }  
+//         .alert-button:nth-child(4){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             } 
+//         .alert-button:nth-child(3){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             }  
+//         .alert-button:nth-child(2){
+//         width: 40px;
+//         margin: 0 !important;
+//         background-image:url("../assets/imgs/star.png");
+//         background-repeat: no-repeat;
+//         background-position: center;
+//         color:transparent !important; 
+//         }  
+//         .alert-button:nth-child(1){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             }  
 
-        button{
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/white-star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color: transparent!important;
+//         button{
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/white-star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color: transparent!important;
            
-       }
-    }
+//        }
+//     }
    
     
-    .another-classfive
-    {
+//     .another-classfive
+//     {
 
-        .alert-button:nth-child(5){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            } 
-        .alert-button:nth-child(4){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            } 
-        .alert-button:nth-child(3){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            }  
-        .alert-button:nth-child(2){
-        width: 40px;
-        margin: 0 !important;
-        background-image:url("../assets/imgs/star.png");
-        background-repeat: no-repeat;
-        background-position: center;
-        color:transparent !important; 
-        }  
-        .alert-button:nth-child(1){
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color:transparent !important; 
-            }  
+//         .alert-button:nth-child(5){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             } 
+//         .alert-button:nth-child(4){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             } 
+//         .alert-button:nth-child(3){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             }  
+//         .alert-button:nth-child(2){
+//         width: 40px;
+//         margin: 0 !important;
+//         background-image:url("../assets/imgs/star.png");
+//         background-repeat: no-repeat;
+//         background-position: center;
+//         color:transparent !important; 
+//         }  
+//         .alert-button:nth-child(1){
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color:transparent !important; 
+//             }  
 
-        button{
-            width: 40px;
-            margin: 0 !important;
-            background-image:url("../assets/imgs/white-star.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            color: transparent!important;
+//         button{
+//             width: 40px;
+//             margin: 0 !important;
+//             background-image:url("../assets/imgs/white-star.png");
+//             background-repeat: no-repeat;
+//             background-position: center;
+//             color: transparent!important;
            
-       }
-    }
+//        }
+//     }
    
+
+.alertstar{
+    button{
+         width: 40px;
+         margin: 0 !important;
+         background-image:url('../assets/imgs/star.png');
+         background-repeat: no-repeat;
+         background-position: center;
+         color:white !important;
+    }
+    .alert-button-group{padding:0; margin-top: 10px; flex-direction: row; justify-content: space-around;}
+    border-radius: 12px;
+    .alert-wrapper{border-radius: 12px;}
+}
     
 
 
