--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,10 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');
+body, h1,h2,h3,h4,h5,h6,p,label,input,.label, .select-text, a, li, .segment-button, .toolbar-title{font-family: 'Lato', sans-serif;}
+	.button-ios, .button-md{ font-family: 'Lato', sans-serif;}
+
 .item ion-icon[item-start], .item ion-icon[item-end]{ color: #30be21 !important;}
 .item ion-icon[item-start] + .item-inner{ margin-left: 8px;}
 .item.item-block .item-inner{ border-bottom: 1px solid #d0d0d0 !important;}
@@ -286,3 +290,8 @@
 .disable-hover{opacity:1 !important;}
 
 
+.header{
+    .bar-button-ios[icon-only] ion-icon {
+        font-size: 1.4em;
+    }
+}
