--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -294,4 +294,17 @@ body, h1,h2,h3,h4,h5,h6,p,label,input,.label, .select-text, a, li, .segment-butt
     .bar-button-ios[icon-only] ion-icon {
         font-size: 1.4em;
     }
+    .back-button-icon-ios{
+        
+     font-size: 2.3rem;
+    }
+}
+
+.bottom-page-tab a.active{
+ .img-normal{
+     display: none;
+ }
+ .titl{
+     color: #30be21;
+ }
 }
