--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -1,4 +1,4 @@
-// page-filter {
+page-filter {
 // 	.common-line{font-size:1.2rem; color:#999}
 // 	.common-line a{float:right; color:#999}
 // 	.sub-title{color:#000; text-transform:uppercase; font-size:1.2rem; border-bottom:1px solid #e3e304; padding:6px 8px; background:#faf805; line-height:1; margin:15px 0 10px}
@@ -20,5 +20,23 @@
 // 	{
 // 		margin-bottom: 55px
 // 	}
-
-// }
+ion-input, ion-textarea{
+    font-size: 14px;
+}
+.select {
+    padding: 11px 8px 11px 0px;
+    max-width: 100%;
+    width: 100%;
+    font-size: 14px;
+}
+.item{
+    padding-left: 0;
+    margin-bottom: 10px;
+}
+.button{
+    background: #30be21;
+}
+.range .range-bar-active{
+    background: #30be21;
+}
+}
