--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -57,4 +57,7 @@ page-home {
         }
       .pd{padding:5px}
       .mb-50{margin-bottom: 60px; overflow: hidden;}
+      .toolbar-title-ios{
+        padding: 0 30px;
+      }
 }
