--- a/src/pages/list-product/list-product.scss
+++ b/src/pages/list-product/list-product.scss
@@ -4,7 +4,7 @@ page-list-product {
     
     .bar-button-menutoggle ion-icon{ color: #5d5d5d; }
     .button-inner ion-icon{ color: #5d5d5d; }
-    .toolbar ion-title{ padding: 0 0 1px 40px;}
+    // .toolbar ion-title{ padding: 0 0 1px 40px;}
     .toolbar-title{ padding: 0; text-align: left;}
     .toolbar-title h3{ color: #3e3e3e; font-weight: 600; text-transform: uppercase; font-size: 1.7rem; margin-bottom: 0; margin-top: 0;}
     .toolbar-title p{ margin-top: 0; margin-bottom: 0; font-size: 1.4rem; font-weight: 400;}
@@ -13,7 +13,7 @@ page-list-product {
     .list .item{ margin-bottom: 1rem; border: 1px solid #e9e9e9;}
     .list > .item-block:first-child{ border-top: 0;}
     .list > .item-block:last-child{ margin-top: 0;}
-    .item ion-thumbnail[item-start]{ margin-left: 16px;}
+    .item ion-thumbnail[item-start]{ margin-left: 6px;}
     .item ion-thumbnail img{ width: 80px;}
     // .item ion-thumbnail{ min-width: 34px;}
     .item [item-end]{ margin: 0; background-color: transparent !important; }
@@ -27,9 +27,13 @@ page-list-product {
     
     .item-inner{ align-items: flex-start;}
     .price{ font-size: 1.6rem !important; margin-top: 1rem !important; font-weight: 500 !important; }
-    .item [item-end] ion-icon{ font-size: 2.4rem !important; margin-left: 10px !important; }
+    .item [item-end] ion-icon{ font-size: 2.4rem !important; margin-left: 10px !important; margin-top: 10px;}
     .total-price{ font-size: 2.2rem; margin-top: 9px; color: #30be21; }
 
     .edit-icon{ color: #30be21;}
     .delete-icon{ color: #636363;}
+    .item{padding-left: 0;}
+    .item.item-block .item-inner {
+        border-bottom: none !important;
+    }
 }
