--- a/src/pages/vieworder/vieworder.scss
+++ b/src/pages/vieworder/vieworder.scss
@@ -2,4 +2,12 @@ page-vieworder {
     .card-md {
         margin-bottom: 10px !important;
     }
+    .item.item-block .item-inner {
+        border-bottom: none !important;
+    }
+    .card{
+        margin: 0 0 15px !important;
+        width: 100% !important;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    }
 }
