debashree 21th august eve

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -22,7 +22,9 @@
 </ion-item>
 
 
-
+<!-- <ion-item menuClose  (click)="payment()">
+  <ion-icon name="log-in"  item-start></ion-icon> Payment
+</ion-item> -->
 
 
   <ion-item menuClose  *ngIf="istype==2 && user_exist==1" (click)="profile()">
