--- a/src/pages/checkout/checkout.scss
+++ b/src/pages/checkout/checkout.scss
@@ -69,6 +69,9 @@ color:black
         margin-top: 0;
         color: #777;
         font-size: 14px !important;
+        &.d-block{
+            display: block;
+        }
     }
     .item-radio.item .input-wrapper{
         display: block;
