--- a/src/pages/order-list/order-list.scss
+++ b/src/pages/order-list/order-list.scss
@@ -106,7 +106,21 @@ page-order-list {
         margin-bottom: 60px !important;
     }
     .card-md{margin-bottom: 12px !important ;}
+    .rating-part{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 9999999999;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     .rating-area{
+        padding: 30px 15px;
+        border-radius: 10px;
         &.card .item.item-block .item-inner{
             border-bottom: #eee 1px solid !important;
         }
