--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,7 +25,7 @@ body, h1,h2,h3,h4,h5,h6,p,label,input,.label, .select-text, a, li, .segment-butt
 .logo img{ width: 120px;}
 .toolbar{ padding: 0;}
 
-.footer .toolbar .row .col a img{width: 20px; height: 20px;}
+.footer .toolbar .row .col a img{width: 20px; height: 20px;display: block;margin: auto;}
 .footer .toolbar .row .col a .title{font-size:12px !important;}
 .titl{ margin-top: 0; margin-bottom: 0; color: #646464;}
 .card-md{margin-bottom: 100px !important ;}
@@ -300,10 +300,20 @@ body, h1,h2,h3,h4,h5,h6,p,label,input,.label, .select-text, a, li, .segment-butt
     }
 }
 
+.bottom-page-tab a{
+    .img-active{
+        display: none;
+    }
+}
+
 .bottom-page-tab a.active{
  .img-normal{
-     display: none;
+     display: none !important;
  }
+ .img-active{
+    display: block;
+    margin: auto;
+}
  .titl{
      color: #30be21;
  }
